# cerebelum-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
cerebelum/: __init__.py  distributed.py
cerebelum/dsl/: __init__.py  async_helpers.py  decorators.py
cerebelum/proto/: __init__.py  worker_service_pb2.py  worker_service_pb2_grpc.py
cerebelum/worker/: __init__.py  __main__.py
